20_ComposeBridge/out/base/0-stack-wordpress-namespace.yaml
#! 0-stack-wordpress-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: stack-wordpress
