20_ComposeBridge/out/base/db-deployment.yaml
#! db-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: db
    namespace: stack-wordpress
    labels:
        com.docker.compose.project: stack-wordpress
        com.docker.compose.service: db
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: stack-wordpress
            com.docker.compose.service: db
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: stack-wordpress
                com.docker.compose.service: db                
        spec:
            restartPolicy: Always
            containers:
                - name: db
                  image: mysql:9.7
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: db-3306
                      containerPort: 3306
                    - name: db-30336
                      containerPort: 30336
