20_ComposeBridge/out/base/db-expose.yaml
#! db-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: db
    namespace: stack-wordpress
    labels:
        com.docker.compose.project: stack-wordpress
        com.docker.compose.service: db
spec:
    selector:
        com.docker.compose.project: stack-wordpress
        com.docker.compose.service: db
    ports:
        - name: db-3306
          port: 3306
          targetPort: db-3306
        - name: db-30336
          port: 30336
          targetPort: db-30336
