20_ComposeBridge/out/base/db-service.yaml
# check if there is at least one published port

#! db-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: db-published
    namespace: 20-composebridge
    labels:
        com.docker.compose.project: 20_composebridge
        com.docker.compose.service: db
spec:
    selector:
        com.docker.compose.project: 20_composebridge
        com.docker.compose.service: db
    ports:
        - name: db-3308
          port: 3308
          protocol: TCP
          targetPort: db-3306

# check if there is at least one published port
