20_ComposeBridge/out/base/wordpress-expose.yaml
#! wordpress-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: wordpress
    namespace: stack-wordpress
    labels:
        com.docker.compose.project: stack-wordpress
        com.docker.compose.service: wordpress
spec:
    selector:
        com.docker.compose.project: stack-wordpress
        com.docker.compose.service: wordpress
    ports:
        - name: wordpress-80
          port: 80
          targetPort: wordpress-80
