20_ComposeBridge/out/base/wordpress-service.yaml
#! wordpress-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: wordpress-published
    namespace: stack-wordpress
    labels:
        com.docker.compose.project: stack-wordpress
        com.docker.compose.service: wordpress
spec:
    selector:
        com.docker.compose.project: stack-wordpress
        com.docker.compose.service: wordpress
    ports:
        - name: wordpress-80
          port: 80
          protocol: TCP
          targetPort: wordpress-80
