20_ComposeBridge/out/base/wordpress-network-network-policy.yaml
#! wordpress-network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: wordpress-network-network-policy
    namespace: 20-composebridge
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.wordpress-network: "true"
    policyTypes:
        - Ingress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.wordpress-network: "true"
